# db_labs_s2

./: README.md
Lab-1/: main.py  main2.py  parsed_zvetsad.xhtml  pyproject.toml  scrapy.cfg  transform.xsl  zvetsad_website.xml
Lab-1/results/: uahotels.xml
Lab-1/scrapy_lab1/: items.py  middlewares.py  pipelines.py  settings.py
Lab-1/scrapy_lab1/spiders/: HotelsSpider.py
Lab2/: README.md
Lab3/: README.md
